# isetcam_codex

./: .gitignore  README.md  mypy.ini  pytest.ini
python/: README.md  pyproject.toml  requests.py  requirements.txt
python/isetcam/: __init__.py  adobergb_parameters.py  animated_gif.py  cct.py  cct_to_sun.py  chromaticity.py  chromaticity_plot.py  circle_points.py  cli.py  color_block_matrix.py  color_transform_matrix.py  color_transform_matrix_create.py  ctemp_to_srgb.py  data_path.py  daylight.py  energy_to_quanta.py  ie_clip.py  ie_color_transform.py  ie_cov_ellipsoid.py  ie_format_figure.py  ie_gamma.py  ie_hist_image.py  ie_init.py  ie_init_session.py  ie_load_session.py  ie_luminance_to_radiance.py  ie_mvnrnd.py  ie_normpdf.py  ie_param_format.py  ie_poisson.py  ie_prctile.py  ie_read_spectra.py  ie_responsivity_convert.py  ie_save_session.py  ie_scale.py  ie_scale_columns.py  ie_scp.py  ie_session_get.py  ie_session_set.py  ie_spectra_sphere.py  (+58 more)
python/tests/: requests.py  test_adaptive_laplacian.py  test_adobergb_parameters.py  test_animated_gif.py  test_bayer_indices.py  test_camera_acutance.py  test_camera_clear_data.py  test_camera_color_accuracy.py  test_camera_compute.py  test_camera_compute_sequence.py  test_camera_computesrgb.py  test_camera_create.py  test_camera_from_file.py  test_camera_full_reference.py  test_camera_get_set.py  test_camera_moire.py  test_camera_mtf.py  test_camera_plot.py  test_camera_show.py  test_camera_to_file.py  test_camera_vsnr.py  test_camera_vsnr_sl.py  test_cct_to_sun.py  test_chromaticity_plot.py  test_cie_whiteness.py  (+265 more)
(+397 files in other folders)
