[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "isetcam"
version = "0.0.0"
description = "Experimental Python utilities from ISETCam."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "ISETCam Team"}]
license = {text = "MIT"}

[project.optional-dependencies]
tests = ["pytest"]
